// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components EmptyActivity should renders correctly with a subtitle 1`] = `
<ForwardRef(View)
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <ForwardRef(View)
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <ForwardRef(Image)
    source={2}
    style={
      Object {
        "marginBottom": 20,
      }
    }
  />
  <ForwardRef(View)
    style={
      Object {
        "paddingHorizontal": 60,
      }
    }
  >
    <ForwardRef(Text)
      style={
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      My title
    </ForwardRef(Text)>
    <ForwardRef(Text)
      style={
        Object {
          "fontSize": 13,
          "textAlign": "center",
        }
      }
    >
      My subtitle
    </ForwardRef(Text)>
  </ForwardRef(View)>
  <ForwardRef(View)
    style={
      Object {
        "flex": 1,
      }
    }
  />
</ForwardRef(View)>
`;

exports[`Components EmptyActivity should renders correctly with no subtitle 1`] = `
<ForwardRef(View)
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <ForwardRef(View)
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <ForwardRef(Image)
    source={2}
    style={
      Object {
        "marginBottom": 20,
      }
    }
  />
  <ForwardRef(View)
    style={
      Object {
        "paddingHorizontal": 60,
      }
    }
  >
    <ForwardRef(Text)
      style={
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      My title
    </ForwardRef(Text)>
  </ForwardRef(View)>
  <ForwardRef(View)
    style={
      Object {
        "flex": 1,
      }
    }
  />
</ForwardRef(View)>
`;
